--- a/index.html
+++ b/index.html
@@ -5,17 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="test-detail">
-        <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, 
-            nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, 
-            vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. 
-            ivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, 
-            viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper 
-            ultricies nisi. Nam eget dui. Etiam rhoncus.</p>
-    </div>
+    <header class="header">
+        <nav class="header_navbar">
+            <ul class="navhaut">
+                <li class=" logo">Logo</li>
+                <li class="searchbar"><input class ="searchbar_input"type="text" placeholder="Rechercher ..."></li>
+                <li class="mediumo home"><i class="fa fa-home" style="font-size:24px"></i></li>
+                <li class="mediumo media"><i class="fa fa-caret-square-o-right" style="font-size:24px"></i></li>
+                <li class="navbarli inscrire"><i class='fa fa-address-book' style="font-size:24px"></i><span>S'incrire</span></li>
+                <li class="navbarli connecter"> <i class='fa fa-address-card-o' style="font-size:24px"></i><span>Se connecter</span> </li>
+                <li class="navbarli abonner"><span>S'abonner</span>  </li>
+            </ul>
+            <ul class="navbas">
+                <li>Afrique</li>
+                <li>Europe</li>
+                <li>Amerique</li>
+                <li>Afrique</li>
+                <li>Europe</li>
+                <li>Amerique</li>
+                <li>Afrique</li>
+                <li>Europe</li>
+                <li>Amerique</li>
+            </ul>
+        </nav>
+    </header>
     <div class="main">
         <div class ="elm">
             <h3> Les ivoiriens sont la </h3>
